added repository_test.go
